--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify index.js -t babelify -t glslify | uglify -cm > bundle.js",
-    "start": "budo demo.js --live"
+    "start": "budo index.js:bundle.js --live -- -t babelify -t glslify"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "budo": "^10.0.3",
     "glslify": "^6.1.0",
     "uglify-js": "^3.0.15"
+  },
+  "dependencies": {
+    "dat.gui": "github:dataarts/dat.gui",
+    "regl": "^1.3.0"
   }
 }
